Source/WebKit2/Platform/IPC/Connection.cpp
@@ -256,6 +256,11 @@ Connection::Connection(Identifier identifier, bool isServer, Client& client, Run
     ASSERT(m_client);
 
     platformInitialize(identifier);
+
+#if HAVE(QOS_CLASSES)
+    ASSERT(pthread_main_np());
+    m_mainThread = pthread_self();
+#endif
 }
 
 Connection::~Connection()
@@ -679,6 +684,13 @@ void Connection::processIncomingMessage(std::unique_ptr<MessageDecoder> message)
         });
         return;
     }
+
+#if HAVE(QOS_CLASSES)
+    if (message->isSyncMessage() && m_shouldBoostMainThreadOnSyncMessage) {
+        pthread_override_t override = pthread_override_qos_class_start_np(m_mainThread, QOS_CLASS_USER_INTERACTIVE, 0);
+        message->setQOSClassOverride(override);
+    }
+#endif
 
     // Check if this is a sync message or if it's a message that should be dispatched even when waiting for
     // a sync reply. If it is, and we're waiting for a sync reply this message needs to be dispatched.
